# upg-vpp-tr

./: README.md  dif.txt
.github/workflows/: main.yaml  release.yaml
upf/: CMakeLists.txt  flowtable.c  flowtable.h  flowtable_init.c  pfcp.c  pfcp.h  upf-ee-types.h  upf.c  upf_adf.c  upf_app_dpo.c  upf_classify.c  upf_cli.c  upf_flow_node.c  upf_forward.c  upf_gtpu_decap.c  upf_input.c  upf_pfcp.c  upf_pfcp_api.c  upf_pfcp_api.h  upf_pfcp_server.c  upf_pfcp_server.h  upf_pfcp_session_server.c  upf_prepare_data.c  upf_prepare_data.h  upf_proxy.c  upf_proxy_accept.c  upf_proxy_input.c  upf_proxy_output.c  upf_session_dpo.c  upf_tcp_forward.c
upf/upf-ee/: EE-init.c  EE-init.h  ee-server.c  ee-server.h  ee_client.c  ee_client.h  ee_server.c  ee_server.h  handler.c  handler.h  main.c  pg.c  pg.h  response_builder.c  response_builder.h  send_data.c  send_data.h  upf_interface.c  upf_interface.h  user_handler.c  user_handler.h  utils.c  utils.h
upf/upf-ee/lib/: cvector.h
upf/upf-ee/storage/: event.h  shared_variables.h
upf/upf-ee/types/: decoder.c  decoder.h  ee-server.c  encoder.c  encoder.h  types.c  types.h
